--- a/src/main/resources/com/vertex/vos/AdminContent.fxml
+++ b/src/main/resources/com/vertex/vos/AdminContent.fxml
@@ -31,14 +31,14 @@
                      <children>
                         <VBox fx:id="registrationBox" alignment="CENTER_LEFT" maxWidth="200.0" onMouseClicked="#openRegistration" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                            <children>
-                              <HBox alignment="CENTER" prefWidth="164.0" spacing="10.0">
+                              <HBox alignment="CENTER_LEFT" prefWidth="164.0" spacing="10.0">
                                  <children>
                                     <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
                                           <Image url="@assets/icons/registration.png" />
                                        </image>
                                     </ImageView>
-                                    <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Registration" wrapText="true" />
+                                    <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Set Up" wrapText="true" />
                                  </children>
                               </HBox>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text" text="Register company, divisions, departments, employee accounts, customers, suppliers, and products." wrappingWidth="150.0" />
@@ -59,7 +59,7 @@
                         </VBox>
                         <VBox fx:id="hrBox" alignment="CENTER_LEFT" layoutX="810.0" layoutY="10.0" maxWidth="200.0" onMouseClicked="#openHumanResources" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                            <children>
-                              <HBox alignment="CENTER" spacing="10.0">
+                              <HBox alignment="CENTER_LEFT" spacing="10.0">
                                  <children>
                                     <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -84,7 +84,7 @@
                         </VBox>
                         <VBox fx:id="aeBox" alignment="CENTER_LEFT" layoutX="611.0" layoutY="10.0" maxWidth="200.0" onMouseClicked="#openAssetsEquipments" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                            <children>
-                              <HBox alignment="CENTER" spacing="10.0">
+                              <HBox alignment="CENTER_LEFT" spacing="10.0">
                                  <children>
                                     <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
