--- a/src/main/resources/com/vertex/vos/salesOrderIOperations.fxml
+++ b/src/main/resources/com/vertex/vos/salesOrderIOperations.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableView?>
@@ -81,6 +82,21 @@
                                     </Label>
                                  </children>
                               </VBox>
+                              <VBox fx:id="salesmanBox1">
+                                 <children>
+                                    <Label text="Date Of Order">
+                                       <VBox.margin>
+                                          <Insets left="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <DatePicker fx:id="dateOrdered" />
+                                    <Label fx:id="salesmanErr1" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
+                                       <VBox.margin>
+                                          <Insets left="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                 </children>
+                              </VBox>
                            </children>
                         </HBox>
                         <VBox fx:id="addBoxes">
@@ -114,7 +130,7 @@
                         <URL value="@assets/global.css" />
                      </stylesheets>
                   </VBox>
-                  <TableView fx:id="productsInTransact" editable="true" prefHeight="200.0" prefWidth="200.0" stylesheets="@assets/table.css">
+                  <TableView fx:id="productsInTransact" editable="true" stylesheets="@assets/table.css">
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
