--- a/src/main/resources/com/vertex/vos/ProductSelectionBySupplier.fxml
+++ b/src/main/resources/com/vertex/vos/ProductSelectionBySupplier.fxml
@@ -45,6 +45,24 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
                   </VBox>
+                  <VBox fx:id="branchBox" visible="false">
+                     <children>
+                        <Label text="Source Branch">
+                           <VBox.margin>
+                              <Insets left="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <ComboBox fx:id="branch" editable="true" prefWidth="150.0" />
+                        <Label layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
+                           <VBox.margin>
+                              <Insets left="10.0" />
+                           </VBox.margin>
+                        </Label>
+                     </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                  </VBox>
                </children>
             </HBox>
             <TableView fx:id="productsPerSupplier" stylesheets="@assets/table.css">
