--- a/src/main/resources/com/vertex/vos/dashBoard.fxml
+++ b/src/main/resources/com/vertex/vos/dashBoard.fxml
@@ -104,21 +104,6 @@
                         <Insets bottom="5.0" top="5.0" />
                      </padding>
                   </VBox>
-                  <VBox fx:id="logoutNavigation" alignment="BOTTOM_CENTER" onMouseClicked="#handleLogout" styleClass="vbox-navigation" stylesheets="@assets/style.css">
-                     <children>
-                        <ImageView fx:id="logoutButton" fitHeight="25.0" fitWidth="25.0">
-                           <image>
-                              <Image url="@assets/icons/Logout Rounded.png" />
-                           </image>
-                           <viewport>
-                              <Rectangle2D />
-                           </viewport>
-                        </ImageView>
-                     </children>
-                     <padding>
-                        <Insets bottom="5.0" top="5.0" />
-                     </padding>
-                  </VBox>
                </children>
             </VBox>
          </children>
@@ -203,7 +188,7 @@
             </HBox>
          </children>
       </HBox>
-      <VBox fx:id="minimizeBox" layoutX="1509.6666259765625" layoutY="5.0" AnchorPane.rightAnchor="75.0" AnchorPane.topAnchor="5.0">
+      <VBox fx:id="minimizeBox" layoutX="1509.6666259765625" layoutY="5.0" AnchorPane.rightAnchor="70.0" AnchorPane.topAnchor="0.0">
          <children>
             <ImageView fx:id="minimizeButton" fitHeight="25.0" fitWidth="25.0" onMouseClicked="#minimizeButton" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -215,7 +200,7 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </VBox>
-      <VBox fx:id="maximizeBox" layoutX="1539.6666259765625" layoutY="5.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="5.0">
+      <VBox fx:id="maximizeBox" layoutX="1539.6666259765625" layoutY="5.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="0.0">
          <children>
             <ImageView fx:id="maximizeButton" fitHeight="25.0" fitWidth="25.0" onMouseClicked="#maximizeButton" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -227,7 +212,7 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </padding>
       </VBox>
-      <VBox fx:id="closeBox" layoutX="1569.6666259765625" layoutY="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+      <VBox fx:id="closeBox" layoutX="1569.6666259765625" layoutY="5.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <ImageView fx:id="closeButton" fitHeight="25.0" fitWidth="25.0" onMouseClicked="#closeButton" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -253,6 +238,21 @@
             <Image url="@assets/icons/search.png" />
          </image>
       </ImageView>
+      <VBox fx:id="logoutNavigation" alignment="BOTTOM_CENTER" onMouseClicked="#handleLogout" stylesheets="@assets/style.css" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="14.0">
+         <children>
+            <ImageView fx:id="logoutButton" fitHeight="25.0" fitWidth="25.0">
+               <image>
+                  <Image url="@assets/icons/Logout Rounded.png" />
+               </image>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+            </ImageView>
+         </children>
+         <padding>
+            <Insets bottom="5.0" top="5.0" />
+         </padding>
+      </VBox>
    </children>
    <stylesheets>
       <URL value="@assets/global.css" />
