--- a/src/main/resources/com/vertex/vos/SalesInvoiceReceiptPrintables.fxml
+++ b/src/main/resources/com/vertex/vos/SalesInvoiceReceiptPrintables.fxml
@@ -3,6 +3,7 @@
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -54,17 +55,23 @@
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
+                     <columns>
+                        <TableColumn prefWidth="75.0" text="Description" />
+                        <TableColumn prefWidth="75.0" text="Unit" />
+                        <TableColumn prefWidth="75.0" text="Unit Price" />
+                        <TableColumn prefWidth="75.0" text="Amount" />
+                     </columns>
                   </TableView>
                   <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0">
                      <children>
                         <VBox alignment="TOP_RIGHT">
                            <children>
-                              <Label fx:id="totalGross" styleClass="sub-header" text="Remarks" />
-                              <Label fx:id="lessTotalDiscount" layoutX="10.0" layoutY="10.0" styleClass="sub-header" text="Remarks" />
-                              <Label fx:id="lessVolumeDiscount" layoutX="10.0" layoutY="40.0" styleClass="sub-header" text="Remarks" />
-                              <Label fx:id="subTotal" layoutX="10.0" layoutY="70.0" styleClass="sub-header" text="Remarks" />
-                              <Label fx:id="lessAdditionalDiscount" layoutX="10.0" layoutY="100.0" styleClass="sub-header" text="Remarks" />
-                              <Label fx:id="netInvoiceAmount" layoutX="10.0" layoutY="130.0" styleClass="header" text="Remarks" />
+                              <Label fx:id="totalGross" styleClass="sub-header" text="total gross" />
+                              <Label fx:id="lessTotalDiscount" layoutX="10.0" layoutY="10.0" styleClass="sub-header" text="less total discount" />
+                              <Label fx:id="lessVolumeDiscount" layoutX="10.0" layoutY="40.0" styleClass="sub-header" text="less volume discount" />
+                              <Label fx:id="subTotal" layoutX="10.0" layoutY="70.0" styleClass="sub-header" text="sub total" />
+                              <Label fx:id="lessAdditionalDiscount" layoutX="10.0" layoutY="100.0" styleClass="sub-header" text="less additional discount" />
+                              <Label fx:id="netInvoiceAmount" layoutX="10.0" layoutY="130.0" styleClass="header" text="net invoice amount" />
                            </children>
                         </VBox>
                      </children>
