--- a/src/main/resources/com/vertex/vos/SalesInvoice.fxml
+++ b/src/main/resources/com/vertex/vos/SalesInvoice.fxml
@@ -178,8 +178,9 @@
                                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                     </VBox.margin>
                                 </HBox>
-                                <HBox fx:id="confirmBox" alignment="CENTER_RIGHT">
+                                <HBox fx:id="confirmBox" alignment="CENTER_RIGHT" spacing="10.0">
                                     <children>
+                              <Button fx:id="printButton" mnemonicParsing="false" text="Print" />
                                         <Button fx:id="confirmButton" mnemonicParsing="false" text="Confirm">
                                             <styleClass>
                                                 <String fx:value="button" />
