--- a/src/main/resources/com/vertex/vos/SalesInvoiceReceiptPrintables.fxml
+++ b/src/main/resources/com/vertex/vos/SalesInvoiceReceiptPrintables.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="1123.7" prefWidth="794.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesInvoiceReceiptPrintablesController">
    <children>
@@ -18,28 +18,52 @@
          <children>
             <AnchorPane>
                <children>
-                  <HBox fx:id="headerBox" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #DCF2FF;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <VBox alignment="TOP_RIGHT" layoutX="237.0" layoutY="126.0" style="-fx-border-color: #155E98;" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <ImageView fx:id="headerLogo" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true">
+                        <Label fx:id="invoiceType" styleClass="header" text="CHARGE SALES INVOICE" />
+                        <Label fx:id="date" styleClass="sub-header" text="Date : " />
+                        <Label fx:id="number" styleClass="sub-header" text="Invoice No : " />
+                     </children>
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </padding>
+                  </VBox>
+                  <VBox layoutX="10.0" layoutY="10.0" spacing="5.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                     <children>
+                        <ImageView fx:id="headerLogo" fitHeight="125.0" fitWidth="125.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@assets/icons/vos.png" />
                            </image>
                         </ImageView>
                         <VBox>
                            <children>
-                              <Label fx:id="headerCompanyText" styleClass="header" text="Company Name" />
-                              <Label fx:id="headerCompanyAddress" layoutX="10.0" layoutY="10.0" styleClass="sub-header" text="Company Address" />
-                              <Label fx:id="headerCompanyAdditionalDetails" layoutX="10.0" layoutY="27.0" styleClass="text" text="Additional Info" />
+                              <Label fx:id="headerCompanyText" style="-fx-font-size: 16;" styleClass="sub-header" text="Company Name">
+                                 <font>
+                                    <Font size="13.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="headerCompanyAddress" layoutX="10.0" layoutY="10.0" style="-fx-font-size: 16;" styleClass="sub-header" text="Company Address" />
+                              <Label fx:id="headerCompanyAdditionalDetails" layoutX="10.0" layoutY="27.0" style="-fx-font-size: 16;" styleClass="sub-header" text="Additional Info" />
                            </children>
                         </VBox>
+                        <VBox layoutX="10.0" layoutY="125.0" style="-fx-border-color: #155E98;">
+                           <children>
+                              <Label style="-fx-font-size: 18;" styleClass="header" text="Bill To" />
+                              <Label fx:id="customerName" style="-fx-font-size: 14;" styleClass="sub-header" text="Customer Name : ">
+                                 <font>
+                                    <Font size="13.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="customerAddress" layoutX="10.0" layoutY="10.0" style="-fx-font-size: 14;" styleClass="sub-header" text="Customer Address : " />
+                           </children>
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
+                        </VBox>
                      </children>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                  </HBox>
+                  </VBox>
                   <VBox alignment="TOP_RIGHT" layoutX="494.0" AnchorPane.rightAnchor="0.0">
                      <children>
-                        <Label fx:id="number" styleClass="header" text="SI+NO" />
                         <ImageView fx:id="barcode" pickOnBounds="true" preserveRatio="true" />
                      </children>
                      <padding>
@@ -47,31 +71,34 @@
                      </padding>
                   </VBox>
                </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
             </AnchorPane>
             <VBox>
                <children>
-                  <Label fx:id="invoiceType" styleClass="header" text="CHARGE SALES INVOICE" />
                   <TableView fx:id="tableView" prefHeight="757.0" stylesheets="@assets/table.css">
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                      <columns>
-                        <TableColumn prefWidth="75.0" text="Description" />
-                        <TableColumn prefWidth="75.0" text="Unit" />
-                        <TableColumn prefWidth="75.0" text="Unit Price" />
-                        <TableColumn prefWidth="75.0" text="Amount" />
+                        <TableColumn fx:id="description" prefWidth="75.0" text="Description" />
+                        <TableColumn fx:id="unit" prefWidth="75.0" text="Unit" />
+                        <TableColumn fx:id="unitPrice" prefWidth="75.0" text="Unit Price" />
+                        <TableColumn fx:id="quantity" prefWidth="75.0" text="Quantity" />
+                        <TableColumn fx:id="amount" prefWidth="75.0" text="Amount" />
                      </columns>
                   </TableView>
                   <HBox alignment="BOTTOM_RIGHT" prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <VBox alignment="TOP_RIGHT">
+                        <VBox alignment="TOP_RIGHT" spacing="5.0" style="-fx-border-color: #155E98;">
                            <children>
-                              <Label fx:id="totalGross" styleClass="sub-header" text="total gross" />
-                              <Label fx:id="lessTotalDiscount" layoutX="10.0" layoutY="10.0" styleClass="sub-header" text="less total discount" />
-                              <Label fx:id="lessVolumeDiscount" layoutX="10.0" layoutY="40.0" styleClass="sub-header" text="less volume discount" />
-                              <Label fx:id="subTotal" layoutX="10.0" layoutY="70.0" styleClass="sub-header" text="sub total" />
-                              <Label fx:id="lessAdditionalDiscount" layoutX="10.0" layoutY="100.0" styleClass="sub-header" text="less additional discount" />
-                              <Label fx:id="netInvoiceAmount" layoutX="10.0" layoutY="130.0" styleClass="header" text="net invoice amount" />
+                              <Label fx:id="totalGross" styleClass="footer-price" text="total gross" />
+                              <Label fx:id="lessTotalDiscount" layoutX="10.0" layoutY="10.0" styleClass="footer-price" text="less total discount" />
+                              <Label fx:id="lessVolumeDiscount" layoutX="10.0" layoutY="40.0" styleClass="footer-price" text="less volume discount" />
+                              <Label fx:id="subTotal" layoutX="10.0" layoutY="70.0" styleClass="footer-price" text="sub total" />
+                              <Label fx:id="lessAdditionalDiscount" layoutX="10.0" layoutY="100.0" styleClass="footer-price" text="less additional discount" />
+                              <Label fx:id="netInvoiceAmount" layoutX="10.0" layoutY="130.0" style="-fx-font-weight: 800; -fx-font-size: 18;" styleClass="footer-price" text="net invoice amount" />
                            </children>
                         </VBox>
                      </children>
