--- a/src/main/resources/com/vertex/vos/SalesInvoiceReceiptPrintables.fxml
+++ b/src/main/resources/com/vertex/vos/SalesInvoiceReceiptPrintables.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="1123.7" prefWidth="794.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesInvoiceReceiptPrintablesController">
+<AnchorPane prefHeight="979.2" prefWidth="787.2" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesInvoiceReceiptPrintablesController">
    <children>
       <VBox fx:id="containerBox" layoutX="227.0" layoutY="304.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -77,7 +77,7 @@
             </AnchorPane>
             <VBox>
                <children>
-                  <TableView fx:id="tableView" prefHeight="757.0" stylesheets="@assets/table.css">
+                  <TableView fx:id="tableView" maxHeight="537.6" minHeight="537.6" prefHeight="537.6" stylesheets="@assets/table.css">
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
