--- a/src/main/resources/com/vertex/vos/tripSummary.fxml
+++ b/src/main/resources/com/vertex/vos/tripSummary.fxml
@@ -65,7 +65,7 @@
                         </VBox>
                         <VBox fx:id="Delivery" layoutX="10.0" layoutY="10.0">
                            <children>
-                              <Label text="Delivery Man">
+                              <Label text="Driver">
                                  <VBox.margin>
                                     <Insets left="10.0" />
                                  </VBox.margin>
@@ -117,6 +117,55 @@
                         </HBox>
                      </children>
                   </VBox>
+                  <HBox alignment="CENTER_LEFT" spacing="10.0">
+                     <children>
+                        <VBox>
+                           <children>
+                              <Label text="Province">
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <ComboBox fx:id="province" editable="true" prefWidth="150.0" />
+                              <Label layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                           </children>
+                        </VBox>
+                        <VBox layoutX="10.0" layoutY="10.0">
+                           <children>
+                              <Label text="City">
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <ComboBox fx:id="city" editable="true" prefWidth="150.0" />
+                              <Label layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                           </children>
+                        </VBox>
+                        <VBox layoutX="320.0" layoutY="10.0">
+                           <children>
+                              <Label text="Baranggay">
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <ComboBox fx:id="baranggay" editable="true" prefWidth="150.0" />
+                              <Label layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
+                                 <VBox.margin>
+                                    <Insets left="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
                </children>
                <padding>
                   <Insets bottom="15.0" left="30.0" right="30.0" top="15.0" />
@@ -135,6 +184,9 @@
                               <Label fx:id="tripNo1" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="header" stylesheets="@assets/style.css" text="Sales Orders For Allocation" />
                               <TableView fx:id="approvedSalesOrders" />
                            </children>
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
                         </VBox>
                      </children>
                   </AnchorPane>
@@ -145,6 +197,9 @@
                               <Label fx:id="tripNo11" style="-fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="header" stylesheets="@assets/style.css" text="Sales Order For This Trip" />
                               <TableView fx:id="salesOrderForTripSummary" />
                            </children>
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
                         </VBox>
                      </children>
                   </AnchorPane>
