--- a/src/main/resources/com/vertex/vos/Vehicle.fxml
+++ b/src/main/resources/com/vertex/vos/Vehicle.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.VehicleController">
    <children>
       <VBox layoutX="435.0" layoutY="29.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -44,6 +43,13 @@
                      <children>
                         <Label layoutX="10.0" layoutY="49.0" text="Max Load (KG)" />
                         <TextField fx:id="maxLoad" />
+                        <Label text="Label" visible="false" />
+                     </children>
+                  </VBox>
+                  <VBox layoutX="20.0" layoutY="104.0">
+                     <children>
+                        <Label layoutX="10.0" layoutY="49.0" text="Branch Link" />
+                        <ComboBox fx:id="branchLink" editable="true" prefWidth="150.0" />
                         <Label text="Label" visible="false" />
                      </children>
                   </VBox>
